k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: restapi-services
  namespace: devops
spec: 
  selector:
    app: restapi
  ports:
  - protocol: TCP
    port: 9098
    targetPort: 9098
