k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: devops
spec:
  ingressClassName: nginx
  rules:
  - host: "restapi.go.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: restapi-services
            port:
              number: 9098
